fixed mior spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,6 @@ body {
   .header {
     position: fixed;
     display: flex;
-    justify-content: flex-start;
     font-size: 25px;
     box-shadow: 0px 0px 30px 0px rgba(8, 8, 8, 0.1);
     background:rgba(255,255,255,0.97);
@@ -75,7 +74,7 @@ body {
     text-align: center;
     align-items: flex-end;
     padding: 25px;
-    font-size: 22px;
+    font-size: 21px;
   }
 
   /**************SUMMARY BOXES**************/
@@ -238,7 +237,7 @@ body {
   }
 
   .power-plant-breakdown-table-div {
-    height: 200px;
+    height: 220px;
     background-color: #ffffff;
     color: #465865;
     overflow: auto;
@@ -463,7 +462,7 @@ body {
   }
 
   .map-info {
-    padding-left: 15%;
+    padding: 20px 0 0 20px;
     font-weight: 150;
   }
 
@@ -474,7 +473,7 @@ body {
     box-shadow: 0px 0px 30px 0px rgba(8, 8, 8, 0.1);
     background:rgba(255,255,255,0.97);
     height: 100px;
-    padding: 0 20% 2% 20%;
+    padding: 0 20% 4% 20%;
     margin-top: 30px;
     font-size: 18px;
     border-radius: 5px;
